--- a/rootdir/etc/init.mt6797.usb.rc
+++ b/rootdir/etc/init.mt6797.usb.rc
@@ -370,8 +370,16 @@ on property:sys.usb.config=ptp,mass_storage,adb,acm
 
 #34.USB Charging Only configuration
 on property:sys.usb.config=charging
+# debug:defmtp modify by chenxuanyu start
+    #setprop sys.usb.state ${sys.usb.config}
+    #setprop sys.usb.charging cdp
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
+    write /sys/class/android_usb/android0/idProduct 2008
+    write /sys/class/android_usb/android0/functions ${sys.usb.config}
+    write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
-    setprop sys.usb.charging cdp
+# debug:defmtp modify by chenxuanyu end
 
 on property:sys.usb.charging=cdp
     write /sys/class/android_usb/android0/enable 0
@@ -1071,7 +1079,3 @@ on property:mediatek.em.usb.set=RG_USB20_VRT_VREF_SEL
 
 on property:mediatek.em.usb.set=RG_USB20_INTR_EN
 	write /sys/kernel/debug/usb20_phy/RG_USB20_INTR_EN ${mediatek.em.usb.value}
-
-#add by liliang.bao 
-on property:ril.sn.set=yes
-    write /sys/class/android_usb/android0/iSerial ${persist.radio.serial}
